# src/api/routes/attendanceRouter.js
@@ -1,9 +1,9 @@
 const attendanceController = require("../controllers/attendanceController");
 const router = require("express").Router();
 
-router.post("/checkin", attendanceController.Checkin);
-router.post("/checkout", attendanceController.Checkout);
-router.get("/getall", attendanceController.getAllByQuery);
+router.post("/checkIn", attendanceController.Checkin);
+router.post("/checkOut", attendanceController.Checkout);
+router.get("/getAll", attendanceController.getAllByQuery);
 router.get("/get/:id", attendanceController.getUserId);
 router.delete("/delete/:id", attendanceController.deleteAttendance);
 
